Fixed bugs in Signal and CommandLineArgumentParser.